--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "MIT"
 cargo = "0.24.0"
 docopt = "0.8.1"
 env_logger = "0.5.1"
-goblin = "0.0.14"
+goblin = "0.0.13" # use this version because `object` uses it
 memmap = "0.6"
 object = "0.7"
 rustc-demangle = "0.1.6"
