--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,15 +8,13 @@ readme = "README.md"
 license = "MIT"
 
 [dependencies]
-cargo = "0.26.0"
-docopt = "0.8.1"
+cargo = "0.27"
 env_logger = "0.5.1"
 failure = "0.1.1"
-goblin = "0.0.13" # use this version because `object` uses it
+goblin = "0.0.15"
 memmap = "0.6"
-multimap = "0.4.0"
-object = "0.7"
+multimap = "0.4"
+object = "0.8"
 rustc-demangle = "0.1.6"
-serde = "1.0.11"
-serde_derive = "1.0.11"
+structopt = "0.2"
 term_size = "0.3.1"
