Added an ability to filter by regexp.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ goblin = "0.0.15"
 memmap = "0.6"
 multimap = "0.4"
 object = "0.8"
+regex = "1.0.0"
 rustc-demangle = "0.1.6"
 structopt = "0.2"
 term_size = "0.3.1"
