--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cargo-bloat"
-version = "0.5.2"
+version = "0.6.0"
 authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
 description = "Find out what takes most of the space in your executable."
 repository = "https://github.com/RazrFalcon/cargo-bloat"
@@ -8,14 +8,14 @@ readme = "README.md"
 license = "MIT"
 
 [dependencies]
-cargo = "0.28"
-env_logger = "0.5.1"
-failure = "0.1.1"
 goblin = "0.0.15" # the same version as in `object`
 memmap = "0.6"
 multimap = "0.4"
-object = "0.9"
-regex = "1.0.0"
+object = { version = "0.9", default-features = false, features = ["std", "compression"] }
+regex = "1"
 rustc-demangle = "0.1.6"
+serde = "1"
+serde_derive = "1"
+serde_json = "1"
 structopt = "0.2"
 term_size = "0.3.1"
