Added 'cargo-plugins' category.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "cargo-bloat"
 version = "0.6.2"
 authors = ["Reizner Evgeniy <razrfalcon@gmail.com>"]
 description = "Find out what takes most of the space in your executable."
+categories = ["development-tools::cargo-plugins"]
 repository = "https://github.com/RazrFalcon/cargo-bloat"
 readme = "README.md"
 license = "MIT"
