--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,11 @@ license = "MIT"
 edition = "2018"
 
 [dependencies]
+json = "0.11"
 memmap = "0.7"
-multimap = "0.5"
+multimap = { version = "0.5", default-features = false }
 regex = "1"
 rustc-demangle = "0.1.6"
-serde = "1"
-serde_derive = "1"
-serde_json = "1"
 structopt = "0.2"
 term_size = "0.3.1"
 time = "0.1"
