Use pico-args instead of structopt.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ edition = "2018"
 json = "0.11"
 memmap = "0.7"
 multimap = { version = "0.5", default-features = false }
+pico-args = "0.1"
 regex = "1"
 rustc-demangle = "0.1.6"
-structopt = "0.2"
 term_size = "0.3.1"
 time = "0.1"
