--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,10 @@ json = "0.11"
 memmap = "0.7"
 multimap = { version = "0.5", default-features = false }
 pico-args = "0.1"
-regex = "1"
+regex = { version = "1.1", optional = true }
 rustc-demangle = "0.1.6"
 term_size = "0.3.1"
 time = "0.1"
+
+[features]
+regex-filter = ["regex"]
