--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,9 +14,14 @@ json = "0.11"
 memmap = "0.7"
 multimap = { version = "0.5", default-features = false }
 pico-args = "0.2"
-regex = { version = "1.2", optional = true }
 term_size = "0.3.1"
 time = "0.1"
+
+[dependencies.regex]
+version = "1.3"
+optional = true
+default-features = false
+features = ["std"]
 
 [features]
 regex-filter = ["regex"]
