--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 
 [dependencies]
 json = "0.12"
-memmap = "0.7"
+memmap2 = "0.1"
 multimap = { version = "0.8", default-features = false }
 pico-args = "0.3"
 term_size = "0.3.1"
