--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,11 +11,10 @@ edition = "2018"
 
 [dependencies]
 json = "0.12"
-memmap = "0.7"
-multimap = { version = "0.5", default-features = false }
-pico-args = "0.2"
+memmap2 = "0.1"
+multimap = { version = "0.8", default-features = false }
+pico-args = "0.3"
 term_size = "0.3.1"
-time = "0.1"
 
 [dependencies.regex]
 version = "1.3"
