--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ memmap2 = "0.1"
 multimap = { version = "0.8", default-features = false }
 pico-args = "0.3"
 term_size = "0.3.1"
+binfarce = "0.1.0"
 
 [dependencies.regex]
 version = "1.3"
