--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,5 @@ default-features = false
 features = ["std"]
 
 [features]
-default = ["regex"]
+default = ["regex-filter"]
 regex-filter = ["regex"]
