Replace unmaintained dependency term_size with terminal_size
term_size is officially unmaintained and the authors recommend switching to terminal_size [1].

[1] https://github.com/clap-rs/term_size-rs/blob/5889fdc589d267182cc946faa24e0e3166a70000/README.md

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ json = "0.12"
 memmap2 = "0.5"
 multimap = { version = "0.8", default-features = false }
 pico-args = { version = "0.5.0", features = ["eq-separator", "short-space-opt"]}
-term_size = "0.3.1"
+terminal_size = "0.2"
 binfarce = "0.2.1"
 pdb = "0.7.0"
 
